tweaked state field on form, touched up initializer. intializer isn't working on local right now because of authentication call'

--- a/views/index.haml
+++ b/views/index.haml
@@ -74,7 +74,7 @@
               .control-group
                 %label.control-label{ :for => 'person_state' }
                   State
-                .timecontrols
+                .controls
                   %input{ :type => 'text', :id => 'person_state', :name => 'person_state', :placeholder => 'Illinois' }
               .control-group
                 %label.control-label{ :for => 'email_address' }
