--- a/views/index.haml
+++ b/views/index.haml
@@ -7,92 +7,78 @@
       .navbar-inner
         .container
           %a.brand{ :href => '#' }
-            Pick Your Poison!
+            food_poison.us
           %ul.nav.pull-right
             %li.divider-vertical
             %li
               %a{ :href => '/about' } 
                 About
             %li.divider-vertical
+            %li
+              %a{ :href => '/tweets' }
+                Tweets
+            %li.divider-vertical
+            %li
+              %a{ :href => '/responses' }
+                Responses
+            %li.divider-vertical
+            %li
+              %a{ :href => '/forms' }
+                Forms
+            %li.divider-vertical
     .container{ :style => 'padding-top: 40px;' }
       .hero-unit
         %h1 Got Food Poisoning?
-        %p Food poisoning sucks. Think you've got it? Tell us about it.
+        %p Think you got food poisoning from a Chicago restaurant? Tell us about it.
       .row
         .span12
           %form.form-horizontal.well{ :method => 'post', :action => 'submit' }
             %fieldset
               %legend
-                Basic info
+                Restaurant info
               .control-group
                 %label.control-label{ :for => 'restaurant_name' }
-                  What is the name of the restaurant?
+                  What restaurant was it?
                 .controls
                   %input.input-xlarge{ :type => 'text', :id => 'restaurant_name', :name => 'restaurant_name', :placeholder => 'e.g. Billy Goat, Alinea' }
-                  %p.help-block
-                    supporting help text!
               .control-group
                 %label.control-label{ :for => 'restaurant_address' }
-                  What is this restaurant's address?
+                  What was it's address?
                 .controls
                   %input.input-xlarge{ :type => 'text', :id => 'restaurant_address', :name => 'restaurant_address', :placeholder => '70 E Lake St, Chicago, IL' }
                   %p.help-block
               .control-group
                 %label.control-label{ :for => 'problem_description' }
-                  Please describe the problem.
+                  What happened?
                 .controls
                   %textarea.span6{ :id => 'problem_description', :name => 'problem_description', :rows => '6' }
                   %p.help-block
                     Spare no detail!
               .control-group
                 %label.control-label{ :for => 'problem_date' }
-                  On what date were you poisoned?
+                  When did it happen?
                 .controls
                   %input.input-xlarge{ :type => 'text', :id => 'problem_date', :name => 'problem_date' }
 
             %fieldset
               %legend
-                Your contact info
+                Your info
+              %p To let you know what happens, we'd like to be able to contact you over twitter or email.
               .control-group
                 %label.control-label
                   Your name
                 .controls
                   %input{ :type => 'text', :id => 'person_name', :name => 'person_name', :placeholder => 'e.g. Joe Citizen' }
               .control-group
-                %label.control-label
-                  Your address
+                %label.control-label{ :for => 'twitter_handle' }
+                  Twitter handle
                 .controls
-                  %input{ :type => 'text', :id => 'person_address', :name => 'person_address', :placeholder => 'e.g. 70 E Lake St' }
+                  %input{ :type => 'text', :id => 'twitter_handle', :name => 'twitter_handle', :placeholder => '@rahm' }
               .control-group
-                .controls
-                  %input{ :type => 'text', :id => 'person_address', :name => 'person_address', :placeholder => 'Suite 800' }
-              .control-group
-                %label.control-label{ :for => 'person_city' }
-                  City
-                .controls
-                  %input{ :type => 'text', :id => 'person_city', :name => 'person_city', :placeholder => 'Chicago' }
-              .control-group
-                %label.control-label{ :for => 'person_state' }
-                  State
-                .controls
-                  %input{ :type => 'text', :id => 'person_state', :name => 'person_state', :placeholder => 'Illinois' }
-              .control-group
-                %label.control-label{ :for => 'email_address' }
+                %label.control-label{ :for => 'person_email_address' }
                   Email address 
                 .controls
                   %input{ :type => 'text', :id => 'person_email_address', :name => 'person_email_address', :placeholder => 'rahm@cityofchicago.gov' }
-              .control-group
-                %label.control-label{ :for => 'phone_number' }
-                  Phone number
-                .controls
-                  %input{ :type => 'text', :id => 'person_phone_number', :name => 'person_phone_number', :placeholder => '312-123-4150' }
-
-
-
-
-
-
-
             .form-actions
               %button.btn.btn-large.btn-primary{ :type => 'submit' }
                 Submit
