--- a/views/index.haml
+++ b/views/index.haml
@@ -1,89 +1,71 @@
-!!! html
-%html
-  %head
-    %link{ :rel => 'stylesheet', :href => '/bootstrap/css/bootstrap.css' }
-  %body
-    .navbar.navbar-fixed-top
-      .navbar-inner
-        .container
-          %a.brand{ :href => '#' }
-            food_poison.us
-          %ul.nav.pull-right
-            %li.divider-vertical
-            %li
-              %a{ :href => '/about' } 
-                About
-            %li.divider-vertical
-            %li
-              %a{ :href => '/tweets' }
-                Tweets
-            %li.divider-vertical
-            %li
-              %a{ :href => '/responses' }
-                Responses
-            %li.divider-vertical
-            %li
-              %a{ :href => '/forms' }
-                Forms
-            %li.divider-vertical
-    .container{ :style => 'padding-top: 40px;' }
-      .hero-unit
-        %h1 Got Food Poisoning?
-        %p Think you got food poisoning from a Chicago restaurant? Tell us about it.
-      .row
-        .span12
-          %form.form-horizontal.well{ :method => 'post', :action => 'submit' }
-            %fieldset
-              %legend
-                Restaurant info
-              .control-group
-                %label.control-label{ :for => 'restaurant_name' }
-                  What restaurant was it?
-                .controls
-                  %input.input-xlarge{ :type => 'text', :id => 'restaurant_name', :name => 'restaurant_name', :placeholder => 'e.g. Billy Goat, Alinea' }
-              .control-group
-                %label.control-label{ :for => 'restaurant_address' }
-                  What was it's address?
-                .controls
-                  %input.input-xlarge{ :type => 'text', :id => 'restaurant_address', :name => 'restaurant_address', :placeholder => '70 E Lake St, Chicago, IL' }
-                  %p.help-block
-              .control-group
-                %label.control-label{ :for => 'problem_description' }
-                  What happened?
-                .controls
-                  %textarea.span6{ :id => 'problem_description', :name => 'problem_description', :rows => '6' }
-                  %p.help-block
-                    Spare no detail!
-              .control-group
-                %label.control-label{ :for => 'problem_date' }
-                  When did it happen?
-                .controls
-                  %input.input-xlarge{ :type => 'text', :id => 'problem_date', :name => 'problem_date' }
+= haml :navbar
+%script{ :type => 'text/javascript', :src => 'http://maps.googleapis.com/maps/api/js?sensor=false&amp;libraries=places' }
+%script{ :type => 'text/javascript', :src => 'https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js' }
+%script{ :type => 'text/javascript', :src => '/geocomplete/jquery.geocomplete.js' }
+.container{ :style => 'padding-top: 40px;' }
+  .hero-unit
+    %h1 Got Food Poisoning?
+    %p Think you got food poisoning from a Chicago restaurant? Tell us about it.
+  .row
+    .span12
+      %form.form-horizontal.well{ :method => 'post', :action => 'submit' }
+        %fieldset
+          %legend
+            Restaurant info
+          .control-group
+            %label.control-label{ :for => 'restaurant_name' }
+              What restaurant was it?
+            .controls
+              %input.input-xlarge.restaurant-name{ :type => 'text', :id => 'restaurant_name', :name => 'restaurant_name', :placeholder => 'e.g. Billy Goat, Alinea' }
+          .control-group
+            %label.control-label{ :for => 'restaurant_address' }
+              What was it's address?
+            .controls
+              %input.input-xlarge{ :type => 'text', :id => 'restaurant_address', :name => 'restaurant_address', :placeholder => '70 E Lake St, Chicago, IL' }
+              %p.help-block
+          .control-group
+            %label.control-label{ :for => 'problem_description' }
+              What happened?
+            .controls
+              %textarea.span6{ :id => 'problem_description', :name => 'problem_description', :rows => '6' }
+              %p.help-block
+                Spare no detail!
+          .control-group
+            %label.control-label{ :for => 'problem_date' }
+              When did it happen?
+            .controls
+              %input.input-xlarge{ :type => 'text', :id => 'problem_date', :name => 'problem_date' }
 
-            %fieldset
-              %legend
-                Your info
-              %p To let you know what happens, we'd like to be able to contact you over twitter or email.
-              .control-group
-                %label.control-label
-                  Your name
-                .controls
-                  %input{ :type => 'text', :id => 'person_name', :name => 'person_name', :placeholder => 'e.g. Joe Citizen' }
-              .control-group
-                %label.control-label{ :for => 'twitter_handle' }
-                  Twitter handle
-                .controls
-                  %input{ :type => 'text', :id => 'twitter_handle', :name => 'twitter_handle', :placeholder => '@rahm' }
-              .control-group
-                %label.control-label{ :for => 'person_email_address' }
-                  Email address 
-                .controls
-                  %input{ :type => 'text', :id => 'person_email_address', :name => 'person_email_address', :placeholder => 'rahm@cityofchicago.gov' }
-            .form-actions
-              %button.btn.btn-large.btn-primary{ :type => 'submit' }
-                Submit
-              %button.btn
-                Cancel
+        %fieldset
+          %legend
+            Your info
+          %p To let you know what happens, we'd like to be able to contact you over twitter or email.
+          .control-group
+            %label.control-label
+              Your name
+            .controls
+              %input{ :type => 'text', :id => 'person_name', :name => 'person_name', :placeholder => 'e.g. Joe Citizen' }
+          .control-group
+            %label.control-label{ :for => 'twitter_handle' }
+              Twitter handle
+            .controls
+              %input{ :type => 'text', :id => 'twitter_handle', :name => 'twitter_handle', :placeholder => '@rahm' }
+          .control-group
+            %label.control-label{ :for => 'person_email_address' }
+              Email address 
+            .controls
+              %input{ :type => 'text', :id => 'person_email_address', :name => 'person_email_address', :placeholder => 'rahm@cityofchicago.gov' }
+        .form-actions
+          %button.btn.btn-large.btn-primary{ :type => 'submit' }
+            Submit
+          %button.btn
+            Cancel
+
+        :javascript
+          $(".restaurant-name").geocomplete({
+            details: "form"
+          });
+
 
 
 
