added console, tweaked call to tweets mongo collection to sort on jDate column

--- a/views/navbar.haml
+++ b/views/navbar.haml
@@ -1,6 +1,8 @@
 !!! html
 %html
   %head
+    %title food-poison.us
+    %meta{ :charset => 'utf-8' }
     %link{ :rel => 'stylesheet', :href => '/bootstrap/css/bootstrap.css' }
   %body
     .navbar.navbar-fixed-top
