Added open311 post request, restaurant address geocoding, added lat/longs and request token to mongo document, added puts statements for each call in /submit route, added submitted to open311? field to reports view.

--- a/views/index.haml
+++ b/views/index.haml
@@ -51,10 +51,10 @@
             .controls
               %input{ :type => 'text', :id => 'twitter_handle', :name => 'twitter_handle', :placeholder => '@rahm' }
           .control-group
-            %label.control-label{ :for => 'person_email_address' }
+            %label.control-label{ :for => 'person_email' }
               Email address 
             .controls
-              %input{ :type => 'text', :id => 'person_email_address', :name => 'person_email_address', :placeholder => 'rahm@cityofchicago.gov' }
+              %input{ :type => 'text', :id => 'person_email', :name => 'person_email', :placeholder => 'rahm@cityofchicago.gov' }
         .form-actions
           %button.btn.btn-large.btn-primary{ :type => 'submit' }
             Submit
