made index look pretty, added wood background to all pages, created site.css

--- a/views/navbar.haml
+++ b/views/navbar.haml
@@ -4,6 +4,7 @@
     %title food-poison.us
     %meta{ :charset => 'utf-8' }
     %link{ :rel => 'stylesheet', :href => '/bootstrap/css/bootstrap.css' }
+    %link{ :rel => 'stylesheet', :href => 'css/site.css' }
   %body
     .navbar.navbar-fixed-top
       .navbar-inner
@@ -14,7 +15,7 @@
             %li.divider-vertical
               %li
                 %a{ :href => '/about' } 
-                  About
+                  What is this? 
             %li.divider-vertical
             %li
               %a{ :href => '/tweets' }
