--- a/views/index.haml
+++ b/views/index.haml
@@ -2,32 +2,41 @@
 %script{ :type => 'text/javascript', :src => 'http://maps.googleapis.com/maps/api/js?sensor=false&amp;libraries=places' }
 %script{ :type => 'text/javascript', :src => 'https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js' }
 %script{ :type => 'text/javascript', :src => '/geocomplete/jquery.geocomplete.js' }
-.container{ :style => 'padding-top: 40px;' }
+.container#page
   .hero-unit
     %h1 Got Food Poisoning?
-    %p Think you got food poisoning from a Chicago restaurant? Tell us about it.
+    %p
+      %img{ :src => 'img/health.png' }
+      Think a Chicago restaurant made you sick?
+    %p 
+      %img{ :src => 'img/cityhall.png' }
+      Tell the City of Chicago's restaurant inspectors what happened! 
+    %p
+      %img{ :src => 'img/chat.png' }
+      We'll tell you when they do something about it.
   .row
     .span12
       %form.form-horizontal.well{ :method => 'post', :action => 'submit' }
         %fieldset
           %legend
-            Restaurant info
+            .lead
+              What happened? 
           .control-group
             %label.control-label{ :for => 'restaurant_name' }
               What restaurant was it?
             .controls
-              %input.input-xlarge.restaurant-name{ :type => 'text', :id => 'restaurant_name', :name => 'restaurant_name', :placeholder => 'e.g. Billy Goat, Alinea' }
+              %input.input-xlarge.restaurant-name{ :type => 'text', :id => 'restaurant_name', :name => 'restaurant_name', :placeholder => "e.g.  Pete's Fish Shack" }
           .control-group
             %label.control-label{ :for => 'restaurant_address' }
-              What was it's address?
+              What was its address?
             .controls
-              %input.input-xlarge{ :type => 'text', :id => 'restaurant_address', :name => 'restaurant_address', :placeholder => '70 E Lake St, Chicago, IL' }
+              %input.input-xlarge{ :type => 'text', :id => 'restaurant_address', :name => 'restaurant_address', :placeholder => 'e.g.  70 E Lake St, Chicago, IL' }
               %p.help-block
           .control-group
             %label.control-label{ :for => 'problem_description' }
               What happened?
             .controls
-              %textarea.span6{ :id => 'problem_description', :name => 'problem_description', :rows => '6' }
+              %textarea{ :id => 'problem_description', :name => 'problem_description', :rows => '6' }
               %p.help-block
                 Spare no detail!
           .control-group
@@ -38,23 +47,27 @@
 
         %fieldset
           %legend
-            Your info
-          %p To let you know what happens, we'd like to be able to contact you over twitter or email.
+            .lead
+              How can we reach you?
+          .span8.alert.alert-info
+            &nbsp;To let you know when the City responds, we need your email or twitter handle.  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>No spam, promise.</b>
+          %br
+          %br
           .control-group
             %label.control-label
               Your name
             .controls
-              %input{ :type => 'text', :id => 'person_name', :name => 'person_name', :placeholder => 'e.g. Joe Citizen' }
+              %input{ :type => 'text', :id => 'person_name', :name => 'person_name', :placeholder => 'Joe Citizen' }
           .control-group
             %label.control-label{ :for => 'twitter_handle' }
               Twitter handle
             .controls
-              %input{ :type => 'text', :id => 'twitter_handle', :name => 'twitter_handle', :placeholder => '@rahm' }
+              %input{ :type => 'text', :id => 'twitter_handle', :name => 'twitter_handle', :placeholder => '@joeissick' }
           .control-group
             %label.control-label{ :for => 'person_email' }
               Email address 
             .controls
-              %input{ :type => 'text', :id => 'person_email', :name => 'person_email', :placeholder => 'rahm@cityofchicago.gov' }
+              %input{ :type => 'text', :id => 'person_email', :name => 'person_email', :placeholder => 'jcitizen@gmail.com' }
         .form-actions
           %button.btn.btn-large.btn-primary{ :type => 'submit' }
             Submit
