--- a/views/navbar-admin.haml
+++ b/views/navbar-admin.haml
@@ -18,4 +18,16 @@
                 %a{ :href => '/about' } 
                   What is this? 
             %li.divider-vertical
+            %li
+              %a{ :href => '/tweets' }
+                Tweets
+            %li.divider-vertical
+            %li
+              %a{ :href => '/replies' }
+                @Replies
+            %li.divider-vertical
+            %li
+              %a{ :href => '/reports' }
+                Reports
+            %li.divider-vertical
 
