tweaked language on about page

--- a/views/thanks.haml
+++ b/views/thanks.haml
@@ -7,18 +7,19 @@
         %small
           for sending a restaurant complaint to the City of Chicago!
     %p
-      In mere minutes, the City will email you a <b>service request tracking number</b>.
+      In mere minutes, the City will email you a <b>service request tracking number</b>...
     %img.thumbnail{ :src => '/img/tracking_num.png' }
     %p
-      Use this number to track your <b>restaurant complaint</b> request on the City's <a href='http://servicetracker.cityofchicago.org'>Service Tracker</a> website.
+      And a link to the City's <a href='http://servicetracker.cityofchicago.org'>Service Tracker</a> website,
+      where you can track your <b>restaurant complaint</b> request.
     %img.thumbnail{ :src => '/img/tracking_page.png' }
     %p
       The Department of Public Health will review your complaint. If it checks out, they'll send inspectors to the 
       restaurant.
     %img.thumbnail{ :src => '/img/cdph.png' }
     %p
-      Thanks to the City's new <a href='http://www.cityofchicago.org/content/dam/city/depts/311/general/NewOpen311InformationChart.pdf'>Open311 system</a>, 
-      you can now <a href='http://311api.cityofchicago.org/reports/list_services'>request city services online</a> - 
-      everything from graffiti removal to pothole filling. No need to call 311!
+      By the way - thanks to the City's new <a href='http://www.cityofchicago.org/content/dam/city/depts/311/general/NewOpen311InformationChart.pdf'>Open311 system</a>, 
+      you can now <a href='http://311api.cityofchicago.org/reports/list_services'>request many other city services online</a>. 
+      Everything from graffiti removal to pothole filling. No need to call 311!
     %img.thumbnail{ :src => '/img/open311.png' }
 
