did form validation, fixed restaurant name normalizer, split up person name into first and last name

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -8,6 +8,10 @@ body {
     padding-bottom: 0px;
 }
 
+p {
+    font-size: 15px
+}
+
 /* Hero unit styles */
 .hero-unit { 
     background-color: #fff;
