--- a/views/index.haml
+++ b/views/index.haml
@@ -20,7 +20,15 @@
         How does this work?
   .row
     .span12
-      %form.form-horizontal.well{ :action => 'submit', :method => 'post' }
+      %form.form-horizontal.well{ :action => '/submit', :method => 'post' }
+        - if @errors
+          .alert.alert-error
+            %h3
+              Please add the following stuff:
+            %ul
+              - @errors.each do |error|
+                %li
+                  = error
         %fieldset
           %legend
             .lead
@@ -30,18 +38,20 @@
               What restaurant was it?
             .controls
               %input#restaurant-name.input-xlarge{ :type => 'text', :name => 'restaurant_name', 
-                :placeholder => "e.g.  Pete's Fish Shack" }
+                :placeholder => "e.g.  Pete's Fish Shack", :value => params[:restaurant_name] }
           .control-group
             %label.control-label{ :for => 'restaurant_address' }
               What was its address?
             .controls
               %input#restaurant_address.input-xlarge{ :type => 'text', :name => 'restaurant_address', 
-                :"data-geo" => 'formatted_address', :placeholder => 'e.g.  70 E Lake St, Chicago, IL' }
+                :"data-geo" => 'formatted_address', :placeholder => 'e.g.  70 E Lake St, Chicago, IL',
+                :value => params[:restaurant_address] }
           .control-group
             %label.control-label{ :for => 'problem_description' }
               What happened?
             .controls
-              %textarea#problem_description{ :name => 'problem_description', :rows => '6' }
+              %textarea#problem_description{ :name => 'problem_description', :rows => '6' } 
+                = params[:problem_description] 
               %p.help-block
                 Spare no detail!
           .control-group
@@ -52,22 +62,29 @@
                 %span.add-on
                   %i.icon-calendar
                 %input#problem_date.datepicker.input-xlarge{ :type => 'text', :name => 'problem_date', 
-                  :placeholder => 'e.g. 02/16/2012' }
-
+                  :placeholder => @current_time, :value => params[:problem_date]}
         %fieldset
           %legend
             .lead
               How can we reach you?
           .span8
-            &nbsp;To let you know when the City responds, we need your email.  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>No spam, promise.</b>
+            %p
+              &nbsp;To let you know when the City responds, we need your email.  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>No spam, promise.</b>
           %br
           %br
           %br
           .control-group
             %label.control-label
-              Your name
+              First name
             .controls
-              %input#person_name{ :type => 'text', :name => 'person_name', :placeholder => 'Joe Citizen' }
+              %input#first_name{ :type => 'text', :name => 'first_name', :placeholder => 'Joe',
+              :value => params[:first_name] }
+          .control-group
+            %label.control-label
+              Last name
+            .controls
+              %input#last_name{ :type => 'text', :name => 'last_name', :placeholder => 'Citizen',
+              :value => params[:last_name] }
           .control-group
             %label.control-label{ :for => 'twitter_handle' }
               Twitter handle
@@ -75,7 +92,8 @@
               .input-prepend 
                 %span.add-on
                   @
-                %input#twitter_handle{ :type => 'text', :name => 'twitter_handle', :placeholder => 'joecitizen' }
+                %input#twitter_handle{ :type => 'text', :name => 'twitter_handle', :placeholder => 'joecitizen',
+                :value => params[:twitter_handle]}
           .control-group
             %label.control-label{ :for => 'person_email' }
               Email address 
@@ -83,7 +101,7 @@
               .input-prepend
                 %span.add-on
                   %i.icon-envelope
-                %input#person_email{ :type => 'text', :name => 'person_email', :placeholder => 'jcitizen@gmail.com' }
+                %input#person_email{ :type => 'text', :name => 'person_email', :placeholder => 'jcitizen@gmail.com', :value => params[:person_email]}
         .form-actions
           %button.btn.btn-large.btn-primary{ :type => 'submit' }
             Submit
